--- a/eParty/Views/Home/News.cshtml
+++ b/eParty/Views/Home/News.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="trending-main">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-8">f
                     <!-- Trending Top -->
                     <div class="slider-active">
                         @foreach (var news in Model.TrendingNews)
@@ -122,7 +122,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>F
             </div>
 
             <div class="col-lg-4">
@@ -133,7 +133,7 @@
                         {
                             <div class="follow-us d-flex align-items-center">
                                 <div class="follow-social">
-                                    <a href="#"><img src="data:image/jpeg;base64,@icon" alt=""></a>
+                                    <a href="#"><img src="~/Content/news/assets/img/news/@icon" alt=""></a>
                                 </div>
                                 <div class="follow-count"><span>8,045</span><p>Fans</p></div>
                             </div>
