--- a/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -93,6 +93,41 @@
                                             <span class="sub-item">Provider</span>
                                         </a>
                                     </li>
+                                    <li>
+                                        <a href="/Admin/Comments">
+                                            <span class="sub-item">Comment</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/Cateroies">
+                                            <span class="sub-item">Category</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/Discounts">
+                                            <span class="sub-item">Discount</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/Menus">
+                                            <span class="sub-item">Menu</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/News">
+                                            <span class="sub-item">New</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/Posters">
+                                            <span class="sub-item">Poster</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="/Admin/Providers">
+                                            <span class="sub-item">Provider</span>
+                                        </a>
+                                    </li>
                                 </ul>
                             </div>
                         </li>
