--- a/eParty/Views/Home/News.cshtml
+++ b/eParty/Views/Home/News.cshtml
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="trending-main">
             <div class="row">
-                <div class="col-lg-8">f
+                <div class="col-lg-8">
                     <!-- Trending Top -->
                     <div class="slider-active">
                         @foreach (var news in Model.TrendingNews)
