--- a/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/eParty/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -15,10 +15,12 @@
             google: { families: ["Public Sans:300,400,500,600,700"] },
             custom: {
                 families: [
+
                     "Font Awesome 5 Solid",
                     "Font Awesome 5 Regular",
                     "Font Awesome 5 Brands",
                     "simple-line-icons",
+
                 ],
                 urls: ["/Content/admin/dashboard/css/fonts.min.css"],
             },
@@ -39,14 +41,17 @@
         <div class="sidebar" data-background-color="dark">
             <div class="sidebar-logo">
                 <div class="logo-header" data-background-color="dark">
+
                     <a href="/Admin/Dashboard" class="logo">
                         <img src="/Content/admin/dashboard/img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20" />
                     </a>
                     <div class="nav-toggle">
-                        <button class="btn btn-toggle toggle-sidebar">
+                        <button class="btn btn-toggle
+toggle-sidebar">
                             <i class="gg-menu-right"></i>
                         </button>
                         <button class="btn btn-toggle sidenav-toggler">
+
                             <i class="gg-menu-left"></i>
                         </button>
                     </div>
@@ -57,10 +62,12 @@
             </div>
             <div class="sidebar-wrapper scrollbar scrollbar-inner">
                 <div class="sidebar-content">
+
                     <ul class="nav nav-secondary">
                         <li class="nav-item active">
                             <a href="/Admin/Dashboard">
                                 <i class="fas fa-home"></i>
+
                                 <p>Dashboard</p>
                             </a>
                         </li>
@@ -68,91 +75,82 @@
                             <span class="sidebar-mini-icon">
                                 <i class="fa fa-ellipsis-h"></i>
                             </span>
+
                             <h4 class="text-section">Components</h4>
                         </li>
                         <li class="nav-item">
                             <a data-bs-toggle="collapse" href="#base">
+
                                 <i class="fas fa-th-list"></i>
                                 <p>Material management</p>
                                 <span class="caret"></span>
+
                             </a>
                             <div class="collapse" id="base">
                                 <ul class="nav nav-collapse">
+
                                     <li>
                                         <a href="/Admin/Foods">
+
                                             <span class="sub-item">Food</span>
                                         </a>
                                     </li>
+
                                     <li>
                                         <a href="/Admin/Ingredients">
+
                                             <span class="sub-item">Ingredient</span>
                                         </a>
                                     </li>
+
                                     <li>
                                         <a href="/Admin/Providers">
+
                                             <span class="sub-item">Provider</span>
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="/Admin/Comments">
-                                            <span class="sub-item">Comment</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/Cateroies">
-                                            <span class="sub-item">Category</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/Discounts">
-                                            <span class="sub-item">Discount</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/Menus">
-                                            <span class="sub-item">Menu</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/News">
-                                            <span class="sub-item">New</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/Posters">
-                                            <span class="sub-item">Poster</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/Providers">
-                                            <span class="sub-item">Provider</span>
-                                        </a>
-                                    </li>
+
                                 </ul>
                             </div>
                         </li>
+
+                        @* === BẮT ĐẦU SỬA ĐỔI: Thêm link Báo cáo === *@
                         <li class="nav-item">
+                            <a href="/Admin/Reports">
+                                <i class="fas fa-chart-bar"></i>
+                                <p>Báo cáo (Reports)</p>
+                            </a>
+                        </li>
+                        @* === KẾT THÚC SỬA ĐỔI === *@
+
+                        <li class="nav-item">
+
                             <a href="/Admin/Calendar">
                                 <i class="fas fa-calendar"></i>
                                 <p>Schedule</p>
+
                             </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+
         <div class="main-panel">
             <div class="main-header">
                 <div class="main-header-logo">
                     <div class="logo-header" data-background-color="dark">
                         <a href="index.html" class="logo">
+
                             <img src="/Content/admin/dashboard/img/kaiadmin/logo_light.svg" alt="navbar brand" class="navbar-brand" height="20" />
                         </a>
                         <div class="nav-toggle">
                             <button class="btn btn-toggle toggle-sidebar">
+
                                 <i class="gg-menu-right"></i>
                             </button>
                             <button class="btn btn-toggle sidenav-toggler">
+
                                 <i class="gg-menu-left"></i>
                             </button>
                         </div>
@@ -161,41 +159,55 @@
                         </button>
                     </div>
                 </div>
+
                 <nav class="navbar navbar-header navbar-header-transparent navbar-expand-lg border-bottom">
                     <div class="container-fluid">
                         <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
 
                             <li class="nav-item topbar-user dropdown hidden-caret">
+
                                 <a class="dropdown-toggle profile-pic" data-bs-toggle="dropdown" href="#" aria-expanded="false">
                                     <div class="avatar-sm">
+
                                         <img src="/Content/admin/dashboard/img/profile.jpg" alt="..." class="avatar-img rounded-circle" />
                                     </div>
                                     <span class="profile-username">
+
                                         <span class="op-7">Hi,</span>
                                         <span class="fw-bold">Trieu</span>
+
                                     </span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-user animated fadeIn">
+
                                     <div class="dropdown-user-scroll scrollbar-outer">
                                     <li>
                                         <div class="user-box">
+
                                             <div class="avatar-lg">
                                                 <img src="/Content/admin/dashboard/img/profile.jpg" alt="image profile" class="avatar-img rounded" />
+
                                             </div>
                                             <div class="u-text">
+
                                                 <h4>Trieu</h4>
                                                 <p class="text-muted">trieunn22@uef.edu.vn</p>
+
                                                 <a href="/Home" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
                                             </div>
+
                                         </div>
                                     </li>
                                     <li>
+
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="#">My Profile</a>
+
                                         <a class="dropdown-item" href="/Home">Logout</a>
                                     </li>
                     </div>
                     </ul>
+
                     </li>
                     </ul>
             </div>
@@ -205,6 +217,7 @@
         <div class="container">
             <div class="page-inner">
                 @RenderBody()
+
             </div>
         </div>
         <footer class="footer">
@@ -212,6 +225,7 @@
                 <div class="copyright ms-auto">
                     @DateTime.Now.Year, made with <i class="fa fa-heart heart text-danger"></i> by <a href="#">eParty Team</a>
                 </div>
+
             </div>
         </footer>
     </div>
